--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Currently I am looking for a job, where I can present my skills and prove all of the above.
         </p>
 
-        <div class="moto"> I have a great idea for your website. Do not hesitate - BUY it!
+        <div class="moto"> I have a great idea for your website. Do not hesitate - Buy it!
         </div>
 
         <div class="innerDiv myProjects">
